--- a/style.css
+++ b/style.css
@@ -90,3 +90,10 @@ h2 {
       .page-nav ul li a:visited {
         color: #6f717d;
       }
+	  
+
+h1:after {
+    content:' ';
+    display:block;
+    border:2px solid grey;
+}
