--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
   background-color: #f3f3f3;
   padding: 0;
   margin: 0;
-  font-family: Open sans, san-serif;
+  font-family: 'Open Sans', sans-serif;
  }
 
 .page {
@@ -72,7 +72,7 @@ h2 {
 
 .page-nav {
 	position:absolute;
-	 left: 20px;
+	 left: 10px;
 }
 
   .page-nav ul {
